# fake_console_snapshot

./: .gitignore  README.md  pyproject.toml
examples/: example.py
fcs/: __init__.py  __main__.py  to_img.py
