[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-console-snapshot"
version = "0.1.0"
description = "Generate terminal-style images from plain text, with mixed English/Chinese font support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow",
]

[project.scripts]
fcs = "fcs.__main__:main"

[tool.setuptools.packages.find]
include = ["fcs*"]

[tool.setuptools.package-data]
fcs = ["fonts/*.ttf", "fonts/*.ttc"]
